[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/hair.png" type="Texture" id=1]
[ext_resource path="res://art/hand.png" type="Texture" id=2]
[ext_resource path="res://art/body.png" type="Texture" id=3]
[ext_resource path="res://characters/human.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.29538
height = 5.50544

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2.60651, 2.78109 ), Vector2( -0.307002, -16.9514 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -120.0, -210.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/kez:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.38379, 4.37029 ), Vector2( 4.50272, -9.53516 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("test/kez:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 30.0, -45.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "dodge"
length = 0.1

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3.44326, -12.4487 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -60.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/kez2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7.45838, -8.71325 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("test/kez2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shooting"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("test/kez2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5.1292, -2.98023e-07 ), Vector2( -0.307002, -16.9514 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("test/kez2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -141.599, -210.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("test/kez:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4.97405, 0.796481 ), Vector2( 4.50272, -9.53516 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("test/kez:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 7.75
height = 33.25

[node name="human" type="KinematicBody2D"]
z_index = 5
collision_layer = 7
collision_mask = 2147483655
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.911594, 20.7975 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="bars" type="Sprite" parent="."]
z_index = 5

[node name="hpbar" type="ColorRect" parent="bars"]
margin_left = -13.9497
margin_top = -33.0994
margin_right = 14.0503
margin_bottom = -32.0994
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.890196, 0, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rbar" type="ColorRect" parent="bars/hpbar"]
margin_left = 1.05025
margin_top = 1.93934
margin_right = 26.0503
margin_bottom = 2.93934
color = Color( 0.00392157, 0.968627, 0.878431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamtimer" type="Timer" parent="bars/hpbar"]
wait_time = 0.5
autostart = true

[node name="test" type="Sprite" parent="."]
z_index = 5
texture = ExtResource( 3 )

[node name="haj" type="Sprite" parent="test"]
texture = ExtResource( 1 )

[node name="kez" type="Sprite" parent="test"]
position = Vector2( 4.97405, 0.796481 )
texture = ExtResource( 2 )

[node name="kez2" type="Sprite" parent="test"]
position = Vector2( 5.1292, -2.98023e-07 )
rotation = -2.47136
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="test/kez2"]
position = Vector2( -25.4228, -6.65845 )
rotation = 0.682424

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/dodge = SubResource( 3 )
anims/run = SubResource( 4 )
anims/shooting = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=[
"hurtbox",
]]
collision_layer = 22
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.375 )
shape = SubResource( 6 )

[node name="dodgetimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="bars/hpbar/stamtimer" to="." method="_on_stamtimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="dodgetimer" to="." method="_on_dodgetimer_timeout"]
